Add build tools

--- a/Dockerfile-ubuntu
+++ b/Dockerfile-ubuntu
@@ -2,7 +2,7 @@ FROM ubuntu:18.04
 
 RUN apt update -y && \
 	apt upgrade -y && \
-	apt install -y wget gnupg git curl && \
+	apt install -y wget gnupg git curl build-essential && \
 	curl --silent --location https://deb.nodesource.com/setup_10.x | bash && \
 	curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - && \
 	echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list && \	
