--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -66,7 +66,7 @@ jobs:
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
-      - name: Build and push Docker image with Docker version 20.10
+      - name: Build and push Docker image with the latest Firefox and Chrome on buil date
         uses: docker/build-push-action@v2
         with:
           file: Dockerfile
@@ -74,4 +74,4 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ env.REGISTRY }}/${{ github.repository }}:${{ steps.date.outputs.date }}-${{github.sha}},${{ env.REGISTRY }}/${{ github.repository }}:${{ steps.date.outputs.date }},${{ env.REGISTRY }}/${{ github.repository }}:latest
           labels: ${{ steps.meta.outputs.labels }}
-          platforms: linux/amd64,linux/arm64/v8
+          platforms: linux/amd64
