--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -29,6 +29,9 @@ jobs:
     permissions:
       contents: read
       packages: write
+    strategy:
+      matrix:
+        node_version: [ 12, 14, 16, 17, 18 ]
 
     steps:
       - name: Checkout repository
@@ -64,14 +67,13 @@ jobs:
         id: date
         run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
 
-      # Build and push Docker image with Buildx (don't push on PR)
-      # https://github.com/docker/build-push-action
-      - name: Build and push Docker image with the latest Firefox and Chrome on buil date
+      - name: Build and push Docker image with Node ${{ matrix.node_version }}, the latest Firefox and Chrome on build date
         uses: docker/build-push-action@v2
         with:
           file: Dockerfile
           context: .
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ env.REGISTRY }}/${{ github.repository }}:${{ steps.date.outputs.date }}-${{github.sha}},${{ env.REGISTRY }}/${{ github.repository }}:${{ steps.date.outputs.date }},${{ env.REGISTRY }}/${{ github.repository }}:latest
+          tags: ${{ env.REGISTRY }}/${{ github.repository }}:${{ steps.date.outputs.date }}-${{github.sha}},${{ env.REGISTRY }}/${{ github.repository }}:${{ steps.date.outputs.date }},${{ env.REGISTRY }}/${{ github.repository }}:${{ matrix.node_version }}
           labels: ${{ steps.meta.outputs.labels }}
           platforms: linux/amd64
+          build-args: NODE_VERSION=${{ matrix.node_version }}
