--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -31,7 +31,7 @@ jobs:
       packages: write
     strategy:
       matrix:
-        node_version: [ 12, 14, 16, 17, 18 ]
+        node_version: [ 14, 16, 17, 18 ]
 
     steps:
       - name: Checkout repository
